--- a/yolov8_object_detection_on_custom_dataset.ipynb
+++ b/yolov8_object_detection_on_custom_dataset.ipynb
@@ -297,9 +297,9 @@
         "!pip install roboflow --quiet\n",
         "\n",
         "from roboflow import Roboflow\n",
-        "rf = Roboflow(api_key=\"jNCJaEbm8JHch2Npxe0n\")\n",
-        "project = rf.workspace(\"rohan-shaw-lpkr6\").project(\"weapon-detection-ssip\")\n",
-        "dataset = project.version(1).download(\"yolov8\")"
+        "rf = Roboflow(api_key=\"api-key here\")\n",
+        "project = rf.workspace(\"workspace name here\").project(\"project name here\")\n",
+        "dataset = project.version(project version here).download(\"yolov8\")"
       ]
     },
     {
